--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -1,50 +1,48 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[3, 1, 2]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 7 9\n"
+     ]
     }
    ],
    "source": [
     "import sys\n",
+    "from collections import deque\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "import math\n",
+    "n, m = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
     "\n",
-    "def solution(n, k):\n",
-    "    answer = []\n",
-    "    numberList = [i for i in range(1, n+1)]\n",
-    "    while (n != 0):\n",
-    "        temp = math.factorial(n) // n # 한개에 몇개씩의 값이 있을지 알 수 잇음.\n",
-    "        # 몇 째 자리수\n",
-    "        index = k // temp\n",
-    "        # 몇 번째 자리\n",
-    "        k = k % temp\n",
+    "answer = []\n",
+    "a_pointer = 0\n",
+    "b_pointer = 0\n",
+    "while a_pointer < n and b_pointer < m:\n",
+    "    if A[a_pointer] <= B[b_pointer]:\n",
+    "        answer.append(A[a_pointer])\n",
+    "        a_pointer += 1\n",
+    "        \n",
+    "    else:\n",
+    "        answer.append(B[b_pointer])\n",
+    "        b_pointer += 1\n",
     "\n",
-    "        answer.append(numberList.pop(index))\n",
+    "for i in range(a_pointer, n):\n",
+    "    answer.append(A[i])\n",
+    "for i in range(b_pointer, m):\n",
+    "    answer.append(B[i])\n",
     "\n",
-    "        n -= 1\n",
-    "    \n",
-    "    return answer\n",
+    "print(*answer, sep=' ')\n",
     "\n",
-    "solution(3, 5 - 1)"
+    "\n"
    ]
   },
   {
