--- a/codingTest2/test.ipynb
+++ b/codingTest2/test.ipynb
@@ -2,24 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "3\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "from collections import defaultdict\n",
     "sys.stdin = open(\"input.txt\", \"rt\")\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "# 어치피 인형 N개\n",
     "\n",
-    "\n"
+    "n = int(input())\n",
+    "arr = list(map(int, input().split()))\n",
+    "x = int(input())\n",
+    "\n",
+    "arr.sort()\n",
+    "\n",
+    "lt = 0; rt = n-1\n",
+    "count = 0\n",
+    "\n",
+    "while rt > lt:\n",
+    "    if arr[lt] + arr[rt] < x:\n",
+    "        lt += 1\n",
+    "\n",
+    "    else:\n",
+    "        if arr[lt] + arr[rt] == x:\n",
+    "            count += 1\n",
+    "        rt -= 1\n",
+    "    \n",
+    "print(count)"
    ]
   },
   {
