--- a/codingTest2/프로그래머스/리코쳇 로봇.ipynb
+++ b/codingTest2/프로그래머스/리코쳇 로봇.ipynb
@@ -59,6 +59,78 @@
     "    answer = bfs(start[0], start[1])\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from collections import deque\n",
+    "def solution(board):\n",
+    "    \n",
+    "    def bfs(i, j):\n",
+    "        \n",
+    "        q = deque()\n",
+    "        visited = [[-1] * m for _ in range(n)]\n",
+    "        visited[i][j] = 0\n",
+    "        q.append([i, j])\n",
+    "        \n",
+    "        dx = [-1, 0, 1, 0]\n",
+    "        dy = [0, 1, 0, -1]\n",
+    "        \n",
+    "        while q:\n",
+    "            x, y = q.popleft()\n",
+    "            if x == target[0] and y == target[1]:\n",
+    "                return visited[x][y]\n",
+    "            \n",
+    "            for i in range(4):\n",
+    "                nx = x\n",
+    "                ny = y\n",
+    "                # 벽 혹은 범위 이전까지 이동\n",
+    "                while True:\n",
+    "                    if not available_path(nx + dx[i], ny + dy[i]):\n",
+    "                        break\n",
+    "                    \n",
+    "                    nx = nx + dx[i]\n",
+    "                    ny = ny + dy[i]\n",
+    "                \n",
+    "                if visited[nx][ny] == -1:\n",
+    "                    visited[nx][ny] = visited[x][y] + 1\n",
+    "                    q.append([nx, ny])\n",
+    "                    \n",
+    "        return -1\n",
+    "    \n",
+    "    # 움직일 수 있는 경로인지\n",
+    "    # 벽이거나, 범위 밖으로 나간다면 False\n",
+    "    def available_path(x, y):\n",
+    "        if not (0 <= x < n and 0 <= y < m):\n",
+    "            return False\n",
+    "        \n",
+    "        if [x, y] in wall:\n",
+    "            return False\n",
+    "        \n",
+    "        return True\n",
+    "    \n",
+    "    answer = 0\n",
+    "    \n",
+    "    # 위치 기억하기\n",
+    "    n, m = len(board), len(board[0])\n",
+    "    start = []; wall = []; target = []\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            if board[i][j] == 'D':\n",
+    "                wall.append([i, j])\n",
+    "            elif board[i][j] == 'R':\n",
+    "                start = [i, j]\n",
+    "            elif board[i][j] == 'G':\n",
+    "                target = [i, j]\n",
+    "    \n",
+    "    answer = bfs(start[0], start[1])\n",
+    "    \n",
+    "    return answer"
+   ]
   }
  ],
  "metadata": {
